[package]
name = "scheduler-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

arrow = { git = "https://github.com/tustvold/arrow-rs.git", rev = "e1825cd5817f685f69585414cc175f96f9684ff3", package = "arrow" }
parquet = { git = "https://github.com/tustvold/arrow-rs.git", rev = "e1825cd5817f685f69585414cc175f96f9684ff3", package = "parquet", features = ["async"] }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "sync", "fs", "time"] }
futures = "0.3"
statrs = "0.15"
tikv-jemallocator = "0.4.0"